--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.main.allow-circular-references=true
