webclient error handle added

--- a/apigateway/src/main/resources/application.properties
+++ b/apigateway/src/main/resources/application.properties
@@ -13,16 +13,21 @@ spring.cloud.gateway.discovery.locator.enabled=true
 eureka.client.service-url.defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true	
+eureka.client.register-with-eureka=true
 
 # ROUTING
 spring.cloud.gateway.routes[0].id = USERS
 spring.cloud.gateway.routes[0].uri = lb://USERS
 spring.cloud.gateway.routes[0].predicates[0] = Path=/api/auth/**
-spring.cloud.gateway.routes[0].filters[0] = AuthenticationFilter
+spring.cloud.gateway.routes[0].filters[0] = AuthFilter
 #spring.cloud.gateway.mvc.routes[0].predicates[0].args[pattern]=/loginuser
 
 spring.cloud.gateway.routes[1].id = FEED
 spring.cloud.gateway.routes[1].uri = lb://FEED
 spring.cloud.gateway.routes[1].predicates[0] = Path=/api/feed/**
-spring.cloud.gateway.routes[1].filters[0] = AuthenticationFilter
+spring.cloud.gateway.routes[1].filters[0] = AuthFilter
+
+non-secure-port-enabled: true
+secure-port-enabled: false
+non-secure-port: 80
+secure-port: 443
