--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -15,4 +15,10 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+# EUREKA RELATED
+eureka.client.service-url.defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+
 #spring.main.allow-circular-references=true
