changes from feed

--- a/feed/src/main/resources/application.properties
+++ b/feed/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=feed
 server.port=3002
 spring.data.mongodb.database=askthem
-spring.data.mongodb.uri=mongodb+srv://kalon:kalon@cluster0.t0gzi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=${feed-mongo-uri}
 spring.data.mongodb.socketTimeout=45000
+
+# EUREKA RELATED
+eureka.client.service-url.defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address=true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true	
