--- a/feed/src/main/resources/application.properties
+++ b/feed/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=feed
 server.port=3002
-spring.data.mongodb.database=askthem
+spring.data.mongodb.database=askthemfeed
 spring.data.mongodb.uri=${feed-mongo-uri}
 spring.data.mongodb.socketTimeout=45000
 
